--- a/userfrosting/templates/themes/default/components/head.html
+++ b/userfrosting/templates/themes/default/components/head.html
@@ -3,6 +3,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="{{page.description}}">
     <meta name="author" content="{{site.author}}">
+    <meta name="{{csrf_key}}" content="{{csrf_token}}"> 
     
     <title>{{site.site_title}} | {{page.title}}</title>
     
