--- a/userfrosting/templates/themes/default/users.html
+++ b/userfrosting/templates/themes/default/users.html
@@ -77,7 +77,7 @@
                                                 </li>
                                                 {% endif %}
                                                 <li>
-                                                    <a href="#" data-id="{{user.id}}" class="js-user-edit" data-target="#dialog-user-update" data-toggle="modal">
+                                                    <a href="#" data-id="{{user.id}}" class="js-user-edit" data-target="#dialog-user-edit" data-toggle="modal">
                                                     <i class="fa fa-edit"></i> Edit user
                                                     </a>
                                                 </li>
