Admin activate, delete users

--- a/userfrosting/templates/themes/default/components/user-info-form.html
+++ b/userfrosting/templates/themes/default/components/user-info-form.html
@@ -160,3 +160,7 @@
         {% endif %}
     </div>
 </form>
+<script>
+// Load the validator rules for this form
+var validators = {{validators | raw}};
+</script>
