--- a/userfrosting/templates/themes/default/users.html
+++ b/userfrosting/templates/themes/default/users.html
@@ -121,12 +121,12 @@
                     </div>
                     <div class="row">
                         <div class="col-md-6 ">
-                            <button type="button" class="btn btn-success btn-add-user" data-toggle="modal" data-target="#user-create-dialog">
+                            <button type="button" class="btn btn-success js-user-create" data-toggle="modal" data-target="#dialog-user-create">
                                 <i class="fa fa-plus-square"></i>  Create New User
                             </button>
                         </div>
                         <div class="col-md-6 text-right ">
-                            <a href="users.php">View All Users <i class="fa fa-arrow-circle-right"></i></a>
+                            <a href="#">View All Users <i class="fa fa-arrow-circle-right"></i></a>
                         </div>
                     </div>
                 </div>
