View groups table

--- a/userfrosting/templates/themes/default/components/user-info-form.html
+++ b/userfrosting/templates/themes/default/components/user-info-form.html
@@ -166,7 +166,7 @@
         {% if "delete" not in buttons.hidden %}
         <div class="col-xs-6 col-sm-3">  
             <div class="vert-pad">
-                <button type="button" class="btn btn-block btn-md btn-danger js-user-delete" data-id="{{target_user.id}}" data-name="{{user_name}}" data-toggle="modal">
+                <button type="button" class="btn btn-block btn-md btn-danger js-user-delete" data-id="{{target_user.id}}" data-user_name="{{target_user.user_name}}" data-toggle="modal">
                     <i class="fa fa-trash-o"></i> Delete
                 </button>
             </div>
