--- a/userfrosting/templates/themes/default/user_info.html
+++ b/userfrosting/templates/themes/default/user_info.html
@@ -39,6 +39,8 @@
 		// Initialize primary group buttons
 		$(".bootstrapradio").bootstrapradio();
 		
+        // TODO: forward to user listing page on deletion of user
+        
         /*
 		// Link buttons
 		$('#' + box_id + ' .js-user-edit').click(function() { 
