--- a/userfrosting/templates/themes/root/components/nav-account.html
+++ b/userfrosting/templates/themes/root/components/nav-account.html
@@ -11,7 +11,7 @@
     </div>
     <!-- /.navbar-header -->
     <p class="navbar-text navbar-alert">
-        YOU ARE SIGNED IN AS ROOT USER
+        {{ translate("HEADER_MESSAGE_ROOT") | upper }}
     </p>
     {% include 'menus/topbar.html' %}
     <div class="sidebar-wrapper">
