--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,7 +14,7 @@
             <li><a href="https://github.com/alexweissman/UserFrosting/tarball/master"><i class='fa fa-file-archive-o'></i> Download as a tar.gz file</a></li>
           </ul>
         </li>
-        <li><a href="http://opensourcecoin.org/aweissman/">Demo</a></li>
+        <li><a href="http://uf-demo.alexanderweissman.com/">Demo</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Features <b class="caret"></b></a>
           <ul class="dropdown-menu">
