Enable filtering users by primary group

--- a/userfrosting/templates/themes/default/users.html
+++ b/userfrosting/templates/themes/default/users.html
@@ -11,7 +11,7 @@
                 <div class="col-md-12">
                 <div class='panel panel-primary'>
                 <div class='panel-heading'>
-                    <h3 class='panel-title'><i class='fa fa-users'></i> Users</h3>
+                    <h3 class='panel-title'><i class='{{icon}}'></i> {{box_title}}</h3>
                 </div>
                 <div class='panel-body'>
                     <div class="table-responsive">
