Fix activation email

--- a/userfrosting/templates/common/mail/activate-new.html
+++ b/userfrosting/templates/common/mail/activate-new.html
@@ -7,7 +7,7 @@ You are receiving this email because you registered with {{site.site_title}} ({{
 You will need to activate your account before you can login. Please follow the link below to activate your account.
 </p>
 <p>
-<a href="{{site.uri.public}}/account/activate?activation_token={{user.activation_token}}">{{site.uri.public}}/account/activate?token={{user.activation_token}}</a>
+<a href="{{site.uri.public}}/account/activate?activation_token={{user.activation_token}}">{{site.uri.public}}/account/activate?activation_token={{user.activation_token}}</a>
 </p>
 <p>
 With regards,<br>
