--- a/userfrosting/templates/themes/default/components/user-info-form.html
+++ b/userfrosting/templates/themes/default/components/user-info-form.html
@@ -137,7 +137,7 @@
             </div>
         </div>    
         {% endif %}
-        {% if "active" not in buttons.hidden %}
+        {% if "activate" not in buttons.hidden %}
         <div class="col-xs-6 col-sm-3">      
             <div class="vert-pad">
                 {% if target_user.active == "0" %}
