Implemented password reset feature

--- a/userfrosting/templates/common/reset-password.html
+++ b/userfrosting/templates/common/reset-password.html
@@ -6,62 +6,54 @@
       {% include 'common/components/main-nav.html' %}
       <div class="jumbotron">
         <h1>Reset Password</h1>
-        {% if (confirm_ajax == 0) %}
-        <p class="lead">
-            Please enter your username and the email address you used to sign up.
-            A link with instructions to reset your password will be emailed to you.
-        </p>
-        {% else %}
         <p class="lead">
             Please enter your username and your new password to continue.
         </p>
-        {% endif %}
         {% include 'common/components/alerts.html' %}
-        <form class='form-horizontal' role='form' name='request_password_reset' action='{{site.uri.public}}/account/forgot-password' method='post'>
+        <form class="form-horizontal" role="form" name="reset_password" action="{{site.uri.public}}/account/reset-password" method="post">
             {% include 'common/components/csrf.html' %}
             <div class="form-group">
-                <div class="col-md-offset-3 col-md-6">
-                    <input type="text" class="form-control" placeholder="Username" name = "user_name">
-                </div>
-            </div>
-            {% if (confirm_ajax == 0) %}
-            <div class="form-group">
-                <div class="col-md-offset-3 col-md-6">
-                    <input type="email" class="form-control" placeholder="Email" name="email">
-                </div>
-            </div>
-            {% else %}
-            <div class="form-group">
-                <div class="col-md-offset-3 col-md-6">
-                    <input type="password" class="form-control" placeholder="New Password" name = "password">
+                <label class="control-label col-sm-4">Username</label>
+                <div class="col-sm-8">
+                    <div class="input-group">
+                        <span class="input-group-addon"><i class="fa fa-fw fa-edit"></i></span>                    
+                        <input type="text" class="form-control" placeholder="Username" name="user_name">
+                    </div>
                 </div>
             </div>
             <div class="form-group">
-                <div class="col-md-offset-3 col-md-6">
-                    <input type="password" class="form-control" placeholder="Password Confirm" name = "passwordc">
+                <label class="control-label col-sm-4">New Password</label>
+                <div class="col-sm-8">
+                    <div class="input-group">
+                        <span class="input-group-addon"><i class="fa fa-fw fa-key"></i></span>                    
+                        <input type="password" class="form-control" placeholder="8-50 characters" name="password">
+                    </div>
                 </div>
             </div>
             <div class="form-group">
-                <div class="col-md-offset-3 col-md-6">
-                    <input type="hidden" class="form-control" name = "token" value="{{token}}">
+                <label class="control-label col-sm-4">Confirm New Password</label>
+                <div class="col-sm-8">
+                    <div class="input-group">
+                        <span class="input-group-addon"><i class="fa fa-fw fa-key"></i></span>                
+                        <input type="password" class="form-control" placeholder="Re-enter your new password" name="passwordc">
+                    </div>
                 </div>
             </div>
-            {% endif %}
             <div class="form-group">
-                <div class="col-md-12">
-                    <button type="submit" class="btn btn-success">Email Password Reset Link</button>
-                </div>
+                <input type="hidden" class="form-control" name="activation_token" value="{{activation_token}}">
+            </div>
+            <div class="text-center">
+                <button type="submit" class="btn btn-success">Submit New Password</button>
             </div>
         </form>
       </div>	
     </div> <!-- /container -->
     {% include 'common/components/footer.html' %}	
 
-</div> <!-- /container -->
 <script>
     $(document).ready(function() {          
         // Process form 
-        $("form[name='request_password_reset']").formValidation({
+        $("form[name='reset_password']").formValidation({
           framework: 'bootstrap',
           // Feedback icons
           icon: {
